# MSPC

./: .flake8  .gitignore  .yapfignore  MANIFEST.in  README.md  pyrightconfig.json  requirements.txt  setup.cfg
src/mspc/: __init__.py  config.py  downloader.py  errors.py  mpv.py  mpv.pyi  translator.py  url_handler.py  utils.py  vars.py
src/mspc/player/: __init__.py  enums.py  sound_device.py
src/mspc/services/: __init__.py  service.py  vk.py  yam.py  yt.py
src/mspc/structs/: artist.py  playlist.py  track.py
src/mspc/tools/: compile_locales.py  libmpv_win_downloader.py
src/mspc_tools/: libmpv_win_downloader.py
typestubs/: mpv.pyi  patoolib.pyi  youtubesearchpython.pyi  yt_dlp.pyi
typestubs/fuzzywuzzy/: process.pyi
typestubs/vk_api/: __init__.pyi  exceptions.pyi
typestubs/yandex_music/: __init__.pyi  download_info.pyi  exceptions.pyi  track_short.pyi
typestubs/yandex_music/account/: account.pyi  plus.py  status.pyi
typestubs/yandex_music/album/: album.pyi
typestubs/yandex_music/artist/: artist.pyi  artist_tracks.pyi
typestubs/yandex_music/playlist/: playlist.pyi
typestubs/yandex_music/search/: search.pyi  search_result.pyi
typestubs/yandex_music/track/: track.pyi
typestubs/yandex_music/utils/: request.pyi
