[metadata]
name = mspc
version = 1.0.7
author = Amir Gumerov
author_email = gumerov.amir.e@gmail.com
description = Multi service player core
license = LGPLv2+
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gumerov-amir/mspc
project_urls =
    Bug Tracker = https://github.com/gumerov-amir/mspc/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
pymodules =
    mspc_downloader
python_requires = >=3.7
install_requires =
    babel
    beautifulsoup4
    pydantic
    patool;platform_system=='Windows'
    requests
    vk-api
    yandex-music
    youtube-search-python
    yt-dlp

[options.packages.find]
where = src

[flake8]
ignore =E704,S404,602
exclude = src/mspc/mpv.py,typestubs/*.pyi
inline-quotes = "
max-line-length = 88
